home works page test refs #4

--- a/works/index.html
+++ b/works/index.html
@@ -1,32 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="ja">
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Modern Business - Start Bootstrap Template</title>
+    <meta name="description" content="Webデザイナー石坂太一のポートフォリオサイトです。今までの作成したサイト及び、作品類を掲載しております。webデザイン、コーディングなどが得意です。">
+    <meta name="keywords" content="stone-rise,ポートフォリオ,イラスト,Webデザイナー">
+    <meta name="format-detection" content="telephone=no, email=no, address=no">
+    <title>stone-rise | Works</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link href="css/modern-business.css" rel="stylesheet">
-
+    <link href="../css/modern-business.css" rel="stylesheet">
     <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
+    <link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
+    <link href="../css/default.css" rel="stylesheet" type="text/css">
+    <link rel="shortcut icon" href="images/public/favicon.ico" type="image/vnd.microsoft.icon">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
 </head>
 
 <body>
@@ -42,19 +39,17 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+                <a class="navbar-brand logo_header" href="/"><img src="../images/public/stone-rise_header_logo.png" height="34" width="176" alt="stone-riseのロゴ"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="">Home</a>
                     </li>
-                    <li class="active">
-                        <a href="services.html">Services</a>
-                    </li>
+                    <li class="active">Works</li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="../gallery/index.html">Gallery</a>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio <b class="caret"></b></a>
