--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
     <link href="css/main.css" rel="stylesheet" type="text/css">
-
+    <link rel="shortcut icon" href="images/public/favicon.ico" type="image/vnd.microsoft.icon">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -60,33 +60,33 @@
         </ol>
 
         <!-- Wrapper for slides -->
-        <div class="carousel-inner">
-            <div class="item active">
-                <div class="fill" style="background-image:url('http://dev.stone-rise.com/images/slide_accordion/test_stone-rise_02.png&text=Slide One');"></div>
+        <div class="carousel-inner slide_accordion">
+            <div class="item">
+                <div class="fill" style="background:url('images/slide_accordion/test_stone-rise_02.png') no-repeat top left;"></div>
                 <div class="carousel-caption">
                     <h2>Home</h2>
                 </div>
             </div>
-            <div class="item">
-                <div class="fill" style="background-image:url('http://dev.stone-rise.com/images/slide_accordion/test_stone-rise_03.png&text=Slide Two');"></div>
+            <div class="item active">
+                <div class="fill"><a class="fill" href="works/index.html"><img src="images/slide_accordion/test_stone-rise_03.png" height="1080" width="1920" alt="works画像"></a></div>
                 <div class="carousel-caption">
                     <h2>Works</h2>
                 </div>
             </div>
             <div class="item">
-                <div class="fill" style="background-image:url('http://dev.stone-rise.com/images/slide_accordion/test_stone-rise_04.png&text=Slide Three');"></div>
+                <div class="fill"><a class="fill" href="gallery/index.html"><img src="images/slide_accordion/test_stone-rise_04.png" height="1080" width="1920" alt="gallery画像"></a></div>
                 <div class="carousel-caption">
                     <h2>Gallery</h2>
                 </div>
             </div>
             <div class="item">
-                <div class="fill" style="background-image:url('http://dev.stone-rise.com/images/slide_accordion/test_stone-rise_05.png&text=Slide Three');"></div>
+                <div class="fill"><a class="fill" href="profile/index.html"><img src="images/slide_accordion/test_stone-rise_05.png" height="1080" width="1920" alt="profile画像"></a></div>
                 <div class="carousel-caption">
                     <h2>Profile</h2>
                 </div>
             </div>
             <div class="item">
-                <div class="fill" style="background-image:url('http://dev.stone-rise.com/images/slide_accordion/test_stone-rise_06.png&text=Slide Three');"></div>
+                <div class="fill"><a class="fill" href="contact/index.html"><img src="images/slide_accordion/test_stone-rise_03.png" height="1080" width="1920" alt="contact画像"></a></div>
                 <div class="carousel-caption">
                     <h2>Contact</h2>
                 </div>
@@ -103,41 +103,10 @@
     </header>
     <!-- Page Content -->
     <div class="container">
-
-        <div class="row">
-            <div class="col-lg-12">
-                <ul class="slide_ul" id="testPanel">
-                    <li>
-                        <img src="images/slide_accordion/test_stone-rise_02.png" width="1280" height="540" alt="Home画像">
-                    </li>
-                    <li>
-                        <a href="works.html">
-                            <img src="images/slide_accordion/test_stone-rise_03.png" width="1280" height="540" alt="Works画像">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="gallery.html">
-                            <img src="images/slide_accordion/test_stone-rise_04.png" width="1280" height="540" alt="Gallery画像">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="profile.html">
-                            <img src="images/slide_accordion/test_stone-rise_05.png" width="1280" height="540" alt="Profile画像">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="contact.html">
-                            <img src="images/slide_accordion/test_stone-rise_06.png" width="1280" height="540" alt="Contact画像">
-                        </a>
-                    </li>
-                </ul><!-- Accordionの設定 -->
-            </div>
-        </div>
-
         <!-- Footer -->
         <footer>
             <div class="row footer_sns">
-                <div class="col-md-12">
+                <div class="col-md-12 sns_link">
                     <ul class="list-inline">
                         <li><a href="http://www.pixiv.net/mypage.php#id=2792758" target="_blank" title="別ウインドウで開きます"><img src="images/public/pixiv_sns.png" height="42" width="108"></a></li>
                         <li><a href="https://www.facebook.com/taichi.ishizaka2" target="_blank" title="別ウインドウで開きます"><img src="images/public/facebook_sns.png" height="41" width="161"></a></li>
@@ -145,8 +114,8 @@
                 </div>
             </div><!-- footer_sns .end -->
 
-            <div class="row footer_area">
-                <div class="col-lg-8 col-sm-8">
+            <div class="row">
+                <div class="col-lg-8 col-sm-8 footer_area">
                     <ul class="footer_link nav navbar-nav">
                         <li><i class="glyphicon glyphicon-triangle-right"><a href="/">Home</a></i></li>
                         <li><i class="glyphicon glyphicon-triangle-right"><a href="works.html">Works</a></i></li>
@@ -169,17 +138,7 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
-    <script type="text/javascript" src="js/jquery-horizontalAccordion.js"></script>
-    <script type="text/javascript">
-    //アコーディオンの設定
-    $(document).ready(function() {
-        $("#testPanel").horizontalAccordion({
-            slit: 100,
-            duration: 0.3,
-            startPos : 0
-        })
-    });
-    </script>
+
 
 </body>
 
