--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <title>stone-rise | Home</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link href="css/modern-business.css" rel="stylesheet">
+    <link href="/css/modern-business.css" rel="stylesheet">
     <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
-    <link href="css/main.css" rel="stylesheet" type="text/css">
-    <link rel="shortcut icon" href="images/public/favicon.ico" type="image/vnd.microsoft.icon">
+    <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css" rel="stylesheet" type="text/css">
+    <link href="/css/main.css" rel="stylesheet" type="text/css">
+    <link href="/images/public/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -40,7 +40,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand logo_header" href="index.html"><img src="images/public/stone-rise_header_logo.png" height="34" width="176" alt="stone-riseのロゴ"></a>
+                <a class="navbar-brand logo_header" href="/"><img src="/images/public/stone-rise_header_logo.png" height="34" width="176" alt="stone-riseのロゴ"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <!-- /.navbar-collapse -->
@@ -62,31 +62,31 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner slide_accordion">
             <div class="item">
-                <div class="fill" style="background:url('images/slide_accordion/test_stone-rise_02.png') no-repeat top left;"></div>
+                <div class="fill" style="background:url('/images/slide_accordion/test_stone-rise_02.png') no-repeat top left;"></div>
                 <div class="carousel-caption">
                     <h2>Home</h2>
                 </div>
             </div>
             <div class="item active">
-                <div class="fill"><a class="fill" href="works/index.html"><img src="images/slide_accordion/test_stone-rise_03.png" height="1080" width="1920" alt="works画像"></a></div>
+                <div class="fill"><a class="fill" href="works/index.html"><img src="/images/slide_accordion/test_stone-rise_03.png" height="1080" width="1920" alt="works画像"></a></div>
                 <div class="carousel-caption">
                     <h2>Works</h2>
                 </div>
             </div>
             <div class="item">
-                <div class="fill"><a class="fill" href="gallery/index.html"><img src="images/slide_accordion/test_stone-rise_04.png" height="1080" width="1920" alt="gallery画像"></a></div>
+                <div class="fill"><a class="fill" href="gallery/index.html"><img src="/images/slide_accordion/test_stone-rise_04.png" height="1080" width="1920" alt="gallery画像"></a></div>
                 <div class="carousel-caption">
                     <h2>Gallery</h2>
                 </div>
             </div>
             <div class="item">
-                <div class="fill"><a class="fill" href="profile/index.html"><img src="images/slide_accordion/test_stone-rise_05.png" height="1080" width="1920" alt="profile画像"></a></div>
+                <div class="fill"><a class="fill" href="profile/index.html"><img src="/images/slide_accordion/test_stone-rise_05.png" height="1080" width="1920" alt="profile画像"></a></div>
                 <div class="carousel-caption">
                     <h2>Profile</h2>
                 </div>
             </div>
             <div class="item">
-                <div class="fill"><a class="fill" href="contact/index.html"><img src="images/slide_accordion/test_stone-rise_03.png" height="1080" width="1920" alt="contact画像"></a></div>
+                <div class="fill"><a class="fill" href="contact/index.html"><img src="/images/slide_accordion/test_stone-rise_03.png" height="1080" width="1920" alt="contact画像"></a></div>
                 <div class="carousel-caption">
                     <h2>Contact</h2>
                 </div>
@@ -118,10 +118,10 @@
                 <div class="col-lg-8 col-sm-8 footer_area">
                     <ul class="footer_link nav navbar-nav">
                         <li><i class="glyphicon glyphicon-triangle-right"><a href="/">Home</a></i></li>
-                        <li><i class="glyphicon glyphicon-triangle-right"><a href="works.html">Works</a></i></li>
-                        <li><i class="glyphicon glyphicon-triangle-right"><a href="gallery.html">Gallery</a></i></li>
-                        <li><i class="glyphicon glyphicon-triangle-right"><a href="profile.html">Profile</a></i></li>
-                        <li><i class="glyphicon glyphicon-triangle-right"><a href="contact.html">Contact</a></i></li>
+                        <li><i class="glyphicon glyphicon-triangle-right"><a href="/works/index.html">Works</a></i></li>
+                        <li><i class="glyphicon glyphicon-triangle-right"><a href="/gallery/index.html">Gallery</a></i></li>
+                        <li><i class="glyphicon glyphicon-triangle-right"><a href="/profile/index.html">Profile</a></i></li>
+                        <li><i class="glyphicon glyphicon-triangle-right"><a href="/contact/index.html">Contact</a></i></li>
                     </ul>
                 </div>
                 <div class="col-lg-4 col-sm-4 right">
