--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand logo_header" href="/"><img src="/images/public/stone-rise_header_logo.png" height="34" width="176" alt="stone-riseのロゴ"></a>
+                <a class="navbar-brand logo_header" href="/"><img class="img-responsive img-hover" src="/images/public/stone-rise_header_logo.png" height="34" width="176" alt="stone-riseのロゴ"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <!-- /.navbar-collapse -->
@@ -62,31 +62,31 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner slide_accordion">
             <div class="item">
-                <div class="fill" style="background:url('/images/slide_accordion/test_stone-rise_02.png') no-repeat top left;"></div>
+                <div class="fill img-responsive" style="background:url('/images/slide_accordion/test_stone-rise_02.png') no-repeat top left;"></div>
                 <div class="carousel-caption">
                     <h2>Home</h2>
                 </div>
             </div>
             <div class="item active">
-                <div class="fill"><a class="fill" href="works/index.html"><img src="/images/slide_accordion/test_stone-rise_03.png" height="1080" width="1920" alt="works画像"></a></div>
+                <div class="fill"><a class="fill" href="works/index.html"><img class="img-responsive" src="/images/slide_accordion/test_stone-rise_03.png" height="1080" width="1920" alt="works画像"></a></div>
                 <div class="carousel-caption">
                     <h2>Works</h2>
                 </div>
             </div>
             <div class="item">
-                <div class="fill"><a class="fill" href="gallery/index.html"><img src="/images/slide_accordion/test_stone-rise_04.png" height="1080" width="1920" alt="gallery画像"></a></div>
+                <div class="fill"><a class="fill" href="gallery/index.html"><img class="img-responsive" src="/images/slide_accordion/test_stone-rise_04.png" height="1080" width="1920" alt="gallery画像"></a></div>
                 <div class="carousel-caption">
                     <h2>Gallery</h2>
                 </div>
             </div>
             <div class="item">
-                <div class="fill"><a class="fill" href="profile/index.html"><img src="/images/slide_accordion/test_stone-rise_05.png" height="1080" width="1920" alt="profile画像"></a></div>
+                <div class="fill"><a class="fill" href="profile/index.html"><img class="img-responsive" src="/images/slide_accordion/test_stone-rise_05.png" height="1080" width="1920" alt="profile画像"></a></div>
                 <div class="carousel-caption">
                     <h2>Profile</h2>
                 </div>
             </div>
             <div class="item">
-                <div class="fill"><a class="fill" href="contact/index.html"><img src="/images/slide_accordion/test_stone-rise_03.png" height="1080" width="1920" alt="contact画像"></a></div>
+                <div class="fill"><a class="fill" href="contact/index.html"><img class="img-responsive" src="/images/slide_accordion/test_stone-rise_03.png" height="1080" width="1920" alt="contact画像"></a></div>
                 <div class="carousel-caption">
                     <h2>Contact</h2>
                 </div>
