--- a/works/index.html
+++ b/works/index.html
@@ -47,7 +47,7 @@
                     <li>
                         <a href="/">Home</a>
                     </li>
-                    <li class="active">Works</li>
+                    <li class="active"><a href="/works/index.html">Works</li>
                     <li>
                         <a href="/gallery/index.html">Gallery</a>
                     </li>
