--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
             <div class="row">
                 <div class="col-lg-8 col-sm-8 footer_area">
                     <ul class="footer_link nav navbar-nav">
-                        <li><i class="glyphicon glyphicon-triangle-right"><a href="/">Home</a></i></li>
-                        <li><i class="glyphicon glyphicon-triangle-right"><a href="/works/index.html">Works</a></i></li>
-                        <li><i class="glyphicon glyphicon-triangle-right"><a href="/gallery/index.html">Gallery</a></i></li>
-                        <li><i class="glyphicon glyphicon-triangle-right"><a href="/profile/index.html">Profile</a></i></li>
-                        <li><i class="glyphicon glyphicon-triangle-right"><a href="/contact/index.html">Contact</a></i></li>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/works/index.html">Works</a></li>
+                        <li><a href="/gallery/index.html">Gallery</a></li>
+                        <li><a href="/profile/index.html">Profile</a></li>
+                        <li><a href="/contact/index.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-4 col-sm-4 right">
