--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
             <div class="row">
                 <div class="col-lg-8 col-sm-8 footer_area">
-                    <ul class="footer_link nav navbar-nav">
+                    <ul class="footer_link list-inline">
                         <li><a href="/">Home</a></li>
                         <li><a href="/works/index.html">Works</a></li>
                         <li><a href="/gallery/index.html">Gallery</a></li>
