footer changed refs #4

--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
             </div><!-- footer_sns .end -->
 
             <div class="row">
-                <div class="col-lg-8 col-sm-8 footer_area">
-                    <ul class="footer_link list-inline">
+                <div class="col-lg-9 col-sm-9 footer_area">
+                    <ul class="footer_link navbar-nav">
                         <li><a href="/">Home</a></li>
                         <li><a href="/works/index.html">Works</a></li>
                         <li><a href="/gallery/index.html">Gallery</a></li>
@@ -124,7 +124,7 @@
                         <li><a href="/contact/index.html">Contact</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-4 col-sm-4 right">
+                <div class="col-lg-3 col-sm-3 copy">
                     <p>Copyright &copy; stone-rise 2015</p>
                 </div>
             </div><!-- footer_area .end -->
