footer sns changed refs #4

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <!-- Footer -->
         <footer>
             <div class="row footer_sns">
-                <div class="col-md-12 sns_link">
+                <div class="col-md-12 col-xs-12 sns_link">
                     <ul class="list-inline">
                         <li><a href="http://www.pixiv.net/mypage.php#id=2792758" target="_blank" title="別ウインドウで開きます"><img src="images/public/pixiv_sns.png" height="42" width="108"></a></li>
                         <li><a href="https://www.facebook.com/taichi.ishizaka2" target="_blank" title="別ウインドウで開きます"><img src="images/public/facebook_sns.png" height="41" width="161"></a></li>
