header link changed refs #4

--- a/index.html
+++ b/index.html
@@ -43,6 +43,23 @@
                 <a class="navbar-brand logo_header" href="/"><img src="/images/public/stone-rise_header_logo.png" height="34" width="176" alt="stone-riseのロゴ"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="/">Home</a>
+                    </li>
+                    <li class="active"><a href="/works/index.html">Works</li>
+                    <li>
+                        <a href="/gallery/index.html">Gallery</a>
+                    </li>
+                    <li>
+                        <a href="/profile/index.html">Profile</a>
+                    </li>
+                    <li>
+                        <a href="/contact/index.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
