--- a/index.html
+++ b/index.html
@@ -46,17 +46,13 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="/">Home</a>
-                    </li>
-                    <li class="active"><a href="/works/index.html">Works</li>
-                    <li>
-                        <a href="/gallery/index.html">Gallery</a>
+                        <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="/profile/index.html">Profile</a>
+                        <a href="services.html">Services</a>
                     </li>
                     <li>
-                        <a href="/contact/index.html">Contact</a>
+                        <a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
