header link changed refs #4

--- a/index.html
+++ b/index.html
@@ -46,13 +46,19 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="">Home</a>
                     </li>
                     <li>
-                        <a href="services.html">Services</a>
+                        <a href="/works/index.html">works</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="/gallery/index.html">Gallery</a>
+                    </li>
+                    <li>
+                        <a href="/profile/index.html">Profile</a>
+                    </li>
+                    <li>
+                        <a href="/contact/index.html">Contact</a>
                     </li>
                 </ul>
             </div>
