works index header link changed refs #4

--- a/works/index.html
+++ b/works/index.html
@@ -47,7 +47,9 @@
                     <li>
                         <a href="/">Home</a>
                     </li>
-                    <li class="active"><a href="/works/index.html">Works</li>
+                    <li>
+                        <a href="/works/index.html">works</a>
+                    </li>
                     <li>
                         <a href="/gallery/index.html">Gallery</a>
                     </li>
