works edit refs #6

--- a/works/index.html
+++ b/works/index.html
@@ -114,6 +114,9 @@
             </div>
         </div><!-- /.row -->
 
+        <!-- 段落線 -->
+        <hr>
+
         <div class="row">
             <div class="col-md-6">
                 <a target="_blank" title="別ウインドウで開きます" href="http://test-akisute.stone-rise.com/">
@@ -135,8 +138,8 @@
             <div class="row footer_sns">
                 <div class="col-md-12 col-xs-12 sns_link">
                     <ul class="list-inline">
-                        <li><a href="http://www.pixiv.net/mypage.php#id=2792758" target="_blank" title="別ウインドウで開きます"><img src="images/public/pixiv_sns.png" height="42" width="108"></a></li>
-                        <li><a href="https://www.facebook.com/taichi.ishizaka2" target="_blank" title="別ウインドウで開きます"><img src="images/public/facebook_sns.png" height="41" width="161"></a></li>
+                        <li><a href="http://www.pixiv.net/mypage.php#id=2792758" target="_blank" title="別ウインドウで開きます"><img src="/images/public/pixiv_sns.png" height="42" width="108"></a></li>
+                        <li><a href="https://www.facebook.com/taichi.ishizaka2" target="_blank" title="別ウインドウで開きます"><img src="/images/public/facebook_sns.png" height="41" width="161"></a></li>
                     </ul>
                 </div>
             </div><!-- footer_sns .end -->
