--- a/works/index.html
+++ b/works/index.html
@@ -72,7 +72,7 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Works
+                <h1 class="page-header header_title">Works
                     <small>Webサイト制作</small>
                 </h1>
                 <ol class="breadcrumb">
