works edit refs #6

--- a/works/index.html
+++ b/works/index.html
@@ -108,7 +108,7 @@
                 </a>
             </div>
             <div class="col-md-6">
-                <h3>おまたモータース</h3>
+                <h3 class="web_site">おまたモータース</h3>
                 <p>Webデザインを学び始めた頃に制作しました。山梨県富士吉田市にあるバイク屋さんのサイトです。コーディングとデザインの担当を行いました。</p>
                 <a class="btn btn-primary" target="_blank" title="別ウインドウで開きます" href="http://omata.mydns.jp/">site view</i></a>
             </div>
@@ -124,7 +124,7 @@
                 </a>
             </div>
             <div class="col-md-6">
-                <h3>pratica</h3>
+                <h3 class="web_site">pratica</h3>
                 <p>職業訓練中のサイト制作で作成しました。架空のパスタ専門店の紹介サイトです。企画から実際のイタリアンレストランに行き内装の写真を撮影して、画像の作成、コーディング、サーバの設置までを行いました。</p>
                 <a class="btn btn-primary" target="_blank" title="別ウインドウで開きます" href="http://test-akisute.stone-rise.com/">site view</i></a>
             </div>
