--- a/gallery/index.html
+++ b/gallery/index.html
@@ -190,6 +190,10 @@
 
     </div>
     <!-- /.container -->
+    <!-- jQuery Version 1.11.0 -->
+    <script src="/js/jquery-1.11.0.js"></script>
+
+    <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script> 
 
     <!-- jQuery -->
     <script src="/js/jquery.js"></script>
