--- a/gallery/index.html
+++ b/gallery/index.html
@@ -72,7 +72,7 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header header_title">Gallery
+                <h1 class="page-header">Gallery
                     <small>制作物</small>
                 </h1>
                 <ol class="breadcrumb">
@@ -94,7 +94,7 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header header_title">Illustration
+                <h2 class="page-header">Illustration
                     <small>制作物</small>
                 </h2>
             </div><!-- タイトル -->
@@ -119,7 +119,7 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header header_title">Convenience store
+                <h2 class="page-header">Convenience store
                     <small>POP制作</small>
                 </h2>
             </div><!-- タイトル -->
@@ -144,7 +144,7 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header header_title">Drawing
+                <h2 class="page-header">Drawing
                     <small>デッサン</small>
                 </h2>
             </div><!-- タイトル -->
