gallery page edit refs #7

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -196,8 +196,7 @@
 
     <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script> 
 
-    <!-- jQuery -->
-    <script src="/js/jquery.js"></script>
+
 
     <!-- Bootstrap Core JavaScript -->
     <script src="/js/bootstrap.min.js"></script>
@@ -215,7 +214,8 @@
             changeSpeed: 550, 
             speed: 500,
             effect:'rotate',
-            fullscreen: false
+            fullscreen: false,
+            disablindRightClick: true
         }); 
     });
     </script>
