--- a/gallery/index.html
+++ b/gallery/index.html
@@ -196,7 +196,8 @@
 
     <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script> 
 
-
+    <!-- jQuery -->
+    <script src="/js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="/js/bootstrap.min.js"></script>
