--- a/gallery/index.html
+++ b/gallery/index.html
@@ -18,6 +18,7 @@
     <link href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css" rel="stylesheet" type="text/css">
     <link href="/css/default.css" rel="stylesheet" type="text/css">
     <link href="/css/glisse.css" rel="stylesheet" type="text/css">
+    <link href="/css/gallery.css" rel="stylesheet" type="text/css">
     <link href="/images/public/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
