gallery page edit refs #7

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -217,7 +217,7 @@
             speed: 500,
             effect:'rotate',
             fullscreen: false,
-            disablindRightClick: true
+            disablindRightClick: false
         }); 
     });
     </script>
