gallery page edit refs #7

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -105,16 +105,16 @@
         <!-- Projects Row -->
         <div class="row">
             <div class="col-md-3 img-portfolio gallery_image">
-                <img class="pics img-responsive img-hover image-resize" src="http://placehold.it/750x450" data-glisse-big="http://placehold.it/750x450" rel="group1" title="Illustration" alt="">
+                <img class="pics img-responsive img-hover image-resize" src="http://placehold.it/750x450" data-glisse-big="http://placehold.it/750x450" alt="">
             </div>
             <div class="col-md-3 img-portfolio gallery_image">
-                <img class="pics img-responsive img-hover image-resize" src="http://placehold.it/750x450" data-glisse-big="http://placehold.it/750x450" rel="group1" title="Illustration" alt="">
+                <img class="pics img-responsive img-hover image-resize" src="http://placehold.it/750x450" data-glisse-big="http://placehold.it/750x450" alt="">
             </div>
             <div class="col-md-3 img-portfolio gallery_image">
-                <img class="pics img-responsive img-hover image-resize" src="http://placehold.it/750x450" data-glisse-big="http://placehold.it/750x450" rel="group1" title="Illustration" alt="">
+                <img class="pics img-responsive img-hover image-resize" src="http://placehold.it/750x450" data-glisse-big="http://placehold.it/750x450" alt="">
             </div>
             <div class="col-md-3 img-portfolio gallery_image">
-                <img class="pics img-responsive img-hover image-resize" src="http://placehold.it/750x450" data-glisse-big="http://placehold.it/750x450" rel="group1" title="Illustration" alt="">
+                <img class="pics img-responsive img-hover image-resize" src="http://placehold.it/750x450" data-glisse-big="http://placehold.it/750x450" alt="">
             </div>
         </div>
         <!-- /.row -->
