grallery page changed refs #7

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -89,7 +89,7 @@
         <!-- Image Header -->
         <div class="row">
             <div class="col-lg-12">
-                <img class="img-responsive" src="http://placehold.it/1200x300" alt="">
+                <img class="img-responsive" src="http://placehold.it/1200x300" alt="トップ画像">
             </div>
         </div>
         <!-- /.row -->
@@ -105,16 +105,16 @@
         <!-- Projects Row -->
         <div class="row">
             <div class="col-md-3 img-portfolio gallery_image">
-                <img class="pics img-responsive img-hover image-resize" src="http://placehold.it/750x450" data-glisse-big="http://placehold.it/750x450" alt="">
+                <img class="pics img-responsive img-hover image-resize" src="/images/icon_gallery/illust_20150101.png" data-glisse-big="/images/big_gallery/illust_20150101.png" alt="イラスト画像">
             </div>
             <div class="col-md-3 img-portfolio gallery_image">
-                <img class="pics img-responsive img-hover image-resize" src="http://placehold.it/750x450" data-glisse-big="http://placehold.it/750x450" alt="">
+                <img class="pics img-responsive img-hover image-resize" src="/images/icon_gallery/illust_20120301.jpg" data-glisse-big="/images/big_gallery/illust_20120301.jpg" alt="イラスト画像">
             </div>
             <div class="col-md-3 img-portfolio gallery_image">
-                <img class="pics img-responsive img-hover image-resize" src="http://placehold.it/750x450" data-glisse-big="http://placehold.it/750x450" alt="">
+                <img class="pics img-responsive img-hover image-resize" src="/images/icon_gallery/Illust_closeUp_Illust_honey.png" data-glisse-big="/images/big_gallery/Illust_closeUp_Illust_honey.png" alt="イラスト画像">
             </div>
             <div class="col-md-3 img-portfolio gallery_image">
-                <img class="pics img-responsive img-hover image-resize" src="http://placehold.it/750x450" data-glisse-big="http://placehold.it/750x450" alt="">
+                <img class="pics img-responsive img-hover image-resize" src="/images/icon_gallery/Illust_closeUp_Illust_postcard.png" data-glisse-big="/images/big_gallery/Illust_closeUp_Illust_postcard.png" alt="イラスト画像">
             </div>
         </div>
         <!-- /.row -->
@@ -130,16 +130,16 @@
         <!-- Projects Row -->
         <div class="row">
             <div class="col-md-3 img-portfolio gallery_image">
-                <img class="pics img-responsive img-hover image-resize" src="http://placehold.it/750x450" data-glisse-big="http://placehold.it/750x450" alt="">
+                <img class="pics img-responsive img-hover image-resize" src="/images/icon_gallery/Illust_closeUp_Illust_hrowwin.png" data-glisse-big="/images/big_gallery/Illust_closeUp_Illust_hrowwin.png" alt="イラスト画像">
             </div>
             <div class="col-md-3 img-portfolio gallery_image">
-                <img class="pics img-responsive img-hover image-resize" src="http://placehold.it/750x450" data-glisse-big="http://placehold.it/750x450" alt="">
+                <img class="pics img-responsive img-hover image-resize" src="/images/icon_gallery/Illust_closeUp_Illust_axe.png" data-glisse-big="/images/big_gallery/Illust_closeUp_Illust_axe.png" alt="イラスト画像">
             </div>
             <div class="col-md-3 img-portfolio gallery_image">
-                <img class="pics img-responsive img-hover image-resize" src="http://placehold.it/750x450" data-glisse-big="http://placehold.it/750x450" alt="">
+                <img class="pics img-responsive img-hover image-resize" src="/images/icon_gallery/Illust_closeUp_Illust_pokemon.png" data-glisse-big="/images/big_gallery/Illust_closeUp_Illust_pokemon.png" alt="イラスト画像">
             </div>
             <div class="col-md-3 img-portfolio gallery_image">
-                <img class="pics img-responsive img-hover image-resize" src="http://placehold.it/750x450" data-glisse-big="http://placehold.it/750x450" alt="">
+                <img class="pics img-responsive img-hover image-resize" src="/images/icon_gallery/Illust_closeUp_Illust_uruUp.png" data-glisse-big="/images/big_gallery/Illust_closeUp_Illust_uruUp.png" alt="イラスト画像">
             </div>
         </div>
         <!-- /.row -->
@@ -155,16 +155,16 @@
         <!-- Projects Row -->
         <div class="row">
             <div class="col-md-3 img-portfolio gallery_image">
-                <img class="pics img-responsive img-hover image-resize" src="http://placehold.it/750x450" data-glisse-big="http://placehold.it/750x450" alt="">
+                <img class="pics img-responsive img-hover image-resize" src="/images/icon_gallery/drawing_20120222.jpg" data-glisse-big="/images/big_gallery/drawing_20120222.jpg" alt="イラスト画像">
             </div>
             <div class="col-md-3 img-portfolio gallery_image">
-                <img class="pics img-responsive img-hover image-resize" src="http://placehold.it/750x450" data-glisse-big="http://placehold.it/750x450" alt="">
+                <img class="pics img-responsive img-hover image-resize" src="/images/icon_gallery/Illust_closeUp_Illust_sketch_woman.jpg" data-glisse-big="/images/big_gallery/Illust_closeUp_Illust_sketch_woman.jpg" alt="イラスト画像">
             </div>
             <div class="col-md-3 img-portfolio gallery_image">
-                <img class="pics img-responsive img-hover image-resize" src="http://placehold.it/750x450" data-glisse-big="http://placehold.it/750x450" alt="">
+                <img class="pics img-responsive img-hover image-resize" src="/images/icon_gallery/Illust_closeUp_Illust_sketch_form.jpg" data-glisse-big="/images/big_gallery/Illust_closeUp_Illust_sketch_form.jpg" alt="イラスト画像">
             </div>
             <div class="col-md-3 img-portfolio gallery_image">
-                <img class="pics img-responsive img-hover image-resize" src="http://placehold.it/750x450" data-glisse-big="http://placehold.it/750x450" alt="">
+                <img class="pics img-responsive img-hover image-resize" src="/images/icon_gallery/Illust_closeUp_Illust_sketch_part_foot.jpg" data-glisse-big="/images/big_gallery/Illust_closeUp_Illust_sketch_part_foot.jpg" alt="イラスト画像">
             </div>
         </div>
         <!-- /.row -->
