home page edit refs #4

--- a/index.html
+++ b/index.html
@@ -144,17 +144,19 @@
     </div><!-- container .end -->
     <!-- /.container -->
 
+    <!-- 画面トップへ戻るボタン -->
+    <p id="page-top"><a href="#wrap"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span> PAGE TOP</a></p>
+
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
+    <!-- page top back button jQuery-->
+    <script type="text/javascript" src="/js/page_top.js"></script>
+
     <!-- Script to Activate the Carousel -->
-    <script>
-    $('.carousel').carousel({
-        interval: 10000 //changes the speed
-    })
-    </script>
+    <script type="text/javascript" src="/js/carousel.js"></script>
 
 </body>
 
