works page page top button refs #6

--- a/works/index.html
+++ b/works/index.html
@@ -155,11 +155,17 @@
     </div>
     <!-- /.container -->
 
+    <!-- 画面トップへ戻るボタン -->
+    <p id="page-top"><a href="#wrap"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span> PAGE TOP</a></p>
+
     <!-- jQuery -->
     <script src="/js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="/js/bootstrap.min.js"></script>
+
+    <!-- page top back button jQuery-->
+    <script type="text/javascript" src="/js/page_top.js"></script>
 
 </body>
 
